Closed Bug 1206907 Opened 9 years ago Closed 9 years ago

GenerateWarning is outputing to Browser Console, not Web Console

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox40 --- wontfix
firefox41 --- wontfix
firefox42 --- fixed
firefox43 --- fixed
firefox44 --- fixed
firefox-esr38 --- affected

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file, 1 obsolete file)

This means that generally web-devs won't see WebGL warnings.

Maybe this relates to the entrypoint InitWithLegacyErrorReporting that we don't currently use.
Attachment #8663886 - Flags: review?(dglastonbury)
Attachment #8663886 - Flags: feedback?
Attachment #8663886 - Flags: feedback? → feedback?(terrence)
Attachment #8663886 - Flags: feedback?(terrence) → feedback?(bobbyholley)
Comment on attachment 8663886 [details] [diff] [review]
0001-Use-InitWithLegacyErrorReporting-for-now.patch

Review of attachment 8663886 [details] [diff] [review]:
-----------------------------------------------------------------

This isn't the right thing. You probably want to call .TakeOwnershipOfErrorReporting() after Init(), which is the new way of doing things. Let me know if that doesn't work.

Sorry this stuff is in such an intermediate state. Needs fixing up and we haven't been able to resource it. :\
Attachment #8663886 - Flags: review?(dglastonbury)
Attachment #8663886 - Flags: review-
Attachment #8663886 - Flags: feedback?(bobbyholley)
Attachment #8663886 - Attachment is obsolete: true
Attachment #8663971 - Flags: review?(bobbyholley)
This also works for me locally. Thanks :bholley.
Attachment #8663971 - Flags: review?(bobbyholley) → review+
https://hg.mozilla.org/mozilla-central/rev/1ab1ef2f842a
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment on attachment 8663971 [details] [diff] [review]
0001-Move-WebGL-warnings-back-to-the-web-console.patch

Approval Request Comment
[Feature/regressing bug #]: Possibly bug 1070842?
[User impact if declined]: WebGL warnings and errors are printed in the Browser Console (which the vast majority of people don't check) instead of the Web Console (where devs know to check).
[Describe test coverage new/current, TreeHerder]: none
[Risks and why]: none
[String/UUID change made/needed]: none
Attachment #8663971 - Flags: approval-mozilla-beta?
Attachment #8663971 - Flags: approval-mozilla-aurora?
Comment on attachment 8663971 [details] [diff] [review]
0001-Move-WebGL-warnings-back-to-the-web-console.patch

Taking it to simplify life of developers.  Should be in 42.0 beta 2.
Attachment #8663971 - Flags: approval-mozilla-beta?
Attachment #8663971 - Flags: approval-mozilla-beta+
Attachment #8663971 - Flags: approval-mozilla-aurora?
Attachment #8663971 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: