Bug 1206907 - GenerateWarning should output to Web Console, not Browser Console. - r=bholley